--- a/MobileTest/app/src/main/res/values/strings.xml
+++ b/MobileTest/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="choose_you_city">choose you city</string>
     <string name="ok">ok</string>
     <string name="City">City Name :%s</string>
-    <string name="Temperature">Temperature :%s K</string>
+    <string name="Temperature">Temperature :%s </string>
     <string name="Humidity">Humidity :%s RH</string>
     <string name="city">City : ?</string>
     <string name="temp">Temperature : ? K</string>
